<resources>
    <string name="app_name">Calculator 3.0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="point">,</string>
    <string name="plus">+</string>
    <string name="result">=</string>
    <string name="Calculator30">Theme Purple_500</string>
    <string name="BottomSheetDialog">Theme Red</string>
</resources>